# dead-service-notifier

./: .gitignore  Cargo.toml  README.md  api_list-test.json  api_list.json
src/: main.rs  notification.rs  view.rs
