[package]
name = "dead-service-notifier"
description = "Notify user when web service is not reachable."
version = "0.2.0"
edition = "2021"
authors = ["Ming Chang <mail@mingchang.tw>"]
categories = ["cli"]
keywords = ["cli"]
repository = "https://github.com/ming900518/dead-service-notifier"
license = "MIT"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["native-tls-vendored"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
futures = "0.3.28"
rfd = "0.11.4"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.8.0"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = "0.3.2", features = ["user-notifications"] }

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5.1"

[package.metadata.bundle]
name = "Dead Service Notifier"
identifier = "tw.mingchang.deadservicenotifier"
version = "0.2.0"
category = "Developer Tool"
short_description = "Notify user when web service is not reachable."
long_description = """
Notify user when web service is not reachable.
"""
osx_url_schemes = ["tw.mingchang.deadservicenotifier"]
